修改了一些小bug
