# api/api.pb.go
@@ -38,8 +38,8 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 //-----validate：验证器
 //------required：字段为必填项，值不能为空
 type LoginReq struct {
-	Username             string   `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty" form:"username" `
-	Passwd               string   `protobuf:"bytes,2,opt,name=passwd,proto3" json:"passwd,omitempty" form:"passwd" `
+	Username             string   `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty" form:"username" validate:"required"`
+	Passwd               string   `protobuf:"bytes,2,opt,name=passwd,proto3" json:"passwd,omitempty" form:"passwd" validate:"required"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -121,8 +121,8 @@ var xxx_messageInfo_LoginResp proto.InternalMessageInfo
 
 //增删改查接口响应参数
 type AddReq struct {
-	Nickname             string   `protobuf:"bytes,1,opt,name=nickname,proto3" json:"nickname,omitempty" form:"nickname" `
-	Age                  int32    `protobuf:"varint,2,opt,name=age,proto3" json:"age,omitempty" form:"age" validate:`
+	Nickname             string   `protobuf:"bytes,1,opt,name=nickname,proto3" json:"nickname,omitempty" form:"nickname" validate:"required"`
+	Age                  int32    `protobuf:"varint,2,opt,name=age,proto3" json:"age,omitempty" form:"age" validate:"required"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -162,9 +162,9 @@ func (m *AddReq) XXX_DiscardUnknown() {
 var xxx_messageInfo_AddReq proto.InternalMessageInfo
 
 type UpdateReq struct {
-	Uid                  int64    `protobuf:"varint,1,opt,name=uid,proto3" json:"uid,omitempty" form:"uid" `
-	Nickname             string   `protobuf:"bytes,2,opt,name=nickname,proto3" json:"nickname,omitempty" form:"nickname" `
-	Age                  int32    `protobuf:"varint,3,opt,name=age,proto3" json:"age,omitempty" form:"age" `
+	Uid                  int64    `protobuf:"varint,1,opt,name=uid,proto3" json:"uid,omitempty" form:"uid" validate:"required"`
+	Nickname             string   `protobuf:"bytes,2,opt,name=nickname,proto3" json:"nickname,omitempty" form:"nickname" validate:"required"`
+	Age                  int32    `protobuf:"varint,3,opt,name=age,proto3" json:"age,omitempty" form:"age" validate:"required"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -204,7 +204,7 @@ func (m *UpdateReq) XXX_DiscardUnknown() {
 var xxx_messageInfo_UpdateReq proto.InternalMessageInfo
 
 type DeleteReq struct {
-	Uid                  int64    `protobuf:"varint,1,opt,name=uid,proto3" json:"uid,omitempty" form:"uid" `
+	Uid                  int64    `protobuf:"varint,1,opt,name=uid,proto3" json:"uid,omitempty" form:"uid" validate:"required"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -244,7 +244,7 @@ func (m *DeleteReq) XXX_DiscardUnknown() {
 var xxx_messageInfo_DeleteReq proto.InternalMessageInfo
 
 type GetReq struct {
-	Uid                  int64    `protobuf:"varint,1,opt,name=uid,proto3" json:"uid,omitempty" form:"uid" `
+	Uid                  int64    `protobuf:"varint,1,opt,name=uid,proto3" json:"uid,omitempty" form:"uid" validate:"required"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -284,9 +284,7 @@ func (m *GetReq) XXX_DiscardUnknown() {
 var xxx_messageInfo_GetReq proto.InternalMessageInfo
 
 type Response struct {
-	Code                 int64    `protobuf:"varint,1,opt,name=code,proto3" json:"code"`
-	Message              string   `protobuf:"bytes,2,opt,name=Message,proto3" json:"globalcode.Msg[code]"`
-	Content              string   `protobuf:"bytes,3,opt,name=Content,proto3" json:"content"`
+	Content              string   `protobuf:"bytes,1,opt,name=Content,proto3" json:"content"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -423,52 +421,49 @@ func init() {
 func init() { proto.RegisterFile("helloworld/api/api.proto", fileDescriptor_402fccbaa3a3f07e) }
 
 var fileDescriptor_402fccbaa3a3f07e = []byte{
-	// 706 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x54, 0x41, 0x4f, 0x13, 0x41,
-	0x14, 0xa6, 0xb4, 0xb4, 0xdb, 0x57, 0x04, 0x32, 0x36, 0x58, 0x2a, 0xe9, 0x96, 0x8d, 0x26, 0x06,
-	0xc3, 0x2e, 0x62, 0xe2, 0x81, 0xc4, 0x03, 0x15, 0x83, 0x07, 0x08, 0x66, 0x09, 0xc6, 0x68, 0x8c,
-	0x99, 0x76, 0x86, 0x65, 0xc3, 0x76, 0x67, 0xdd, 0x99, 0x42, 0xb8, 0xca, 0x4f, 0xf0, 0xe2, 0x4f,
-	0xe2, 0x68, 0xe2, 0x7d, 0xa3, 0x68, 0x3c, 0x70, 0xec, 0x2f, 0x30, 0x33, 0xb3, 0x5b, 0x50, 0x68,
-	0xd3, 0x43, 0x9b, 0x99, 0x79, 0xdf, 0xfb, 0xde, 0x37, 0x6f, 0xde, 0xb7, 0x50, 0x3b, 0xa4, 0x41,
-	0xc0, 0x4e, 0x58, 0x1c, 0x10, 0x07, 0x47, 0xbe, 0xfc, 0xd9, 0x51, 0xcc, 0x04, 0x43, 0xb3, 0x84,
-	0x76, 0x99, 0xcd, 0x69, 0x7c, 0xec, 0x77, 0xa8, 0x7d, 0xfc, 0xa4, 0xbe, 0xe2, 0xf9, 0xe2, 0xb0,
-	0xd7, 0xb6, 0x3b, 0xac, 0xeb, 0x78, 0xcc, 0x63, 0x8e, 0xc2, 0xb5, 0x7b, 0x07, 0x6a, 0xa7, 0x36,
-	0x6a, 0xa5, 0xf3, 0xeb, 0xf7, 0x3d, 0xc6, 0xbc, 0x80, 0x5e, 0xa1, 0x68, 0x37, 0x12, 0xa7, 0x69,
-	0x70, 0x31, 0x0d, 0xaa, 0x92, 0x61, 0xc8, 0x04, 0x16, 0x3e, 0x0b, 0xb9, 0x8e, 0x5a, 0x87, 0x60,
-	0x6c, 0x33, 0xcf, 0x0f, 0x5d, 0xfa, 0x09, 0xad, 0x82, 0xd1, 0xe3, 0x34, 0x0e, 0x71, 0x97, 0xd6,
-	0x72, 0xcd, 0xdc, 0xa3, 0x72, 0xab, 0xda, 0x4f, 0xcc, 0xb9, 0x03, 0x16, 0x77, 0xd7, 0xad, 0x2c,
-	0x62, 0x35, 0xdd, 0x01, 0x0a, 0x2d, 0x43, 0x31, 0xc2, 0x9c, 0x9f, 0x90, 0xda, 0xa4, 0xc2, 0xa3,
-	0x7e, 0x62, 0xce, 0x68, 0xbc, 0x3e, 0xb7, 0x9a, 0x6e, 0x8a, 0xb0, 0xd6, 0xa0, 0x9c, 0x56, 0xe2,
-	0x11, 0x7a, 0x08, 0xa5, 0x17, 0x2c, 0x14, 0x34, 0x14, 0x69, 0xa5, 0xca, 0x65, 0x62, 0x96, 0x3a,
-	0xfa, 0xc8, 0xcd, 0x62, 0xd6, 0x01, 0x14, 0x37, 0x08, 0x49, 0xb5, 0x85, 0x7e, 0xe7, 0xe8, 0x76,
-	0x6d, 0x59, 0x44, 0x6a, 0xcb, 0xd6, 0x68, 0x19, 0xf2, 0xd8, 0xa3, 0x4a, 0xd8, 0x54, 0xab, 0xd6,
-	0x4f, 0xcc, 0xaa, 0x06, 0x63, 0x8f, 0x5a, 0xcd, 0x63, 0x1c, 0xf8, 0x04, 0x0b, 0xba, 0xee, 0x4a,
-	0x90, 0x75, 0x96, 0x83, 0xf2, 0x7e, 0x24, 0x0f, 0x64, 0xad, 0x25, 0xc8, 0xf7, 0x7c, 0xa2, 0xca,
-	0xe4, 0x5b, 0xb3, 0xfd, 0xc4, 0xac, 0xa4, 0x2d, 0xf0, 0xe5, 0x7d, 0x64, 0xec, 0x1f, 0x39, 0x93,
-	0x63, 0xc9, 0x59, 0xd2, 0x72, 0xf2, 0x4a, 0xce, 0x35, 0x52, 0x25, 0x47, 0xab, 0xb0, 0xa1, 0xbc,
-	0x49, 0x03, 0x3a, 0xae, 0x08, 0xeb, 0x31, 0x14, 0xb7, 0xa8, 0x18, 0x13, 0x7c, 0x96, 0x03, 0x43,
-	0xb6, 0x9e, 0x85, 0x9c, 0xa2, 0x45, 0x28, 0x74, 0x18, 0xa1, 0x69, 0x82, 0x71, 0x99, 0x98, 0x6a,
-	0xef, 0xaa, 0x7f, 0xb4, 0x06, 0xa5, 0x1d, 0xca, 0x79, 0xd6, 0xbd, 0x72, 0xab, 0x76, 0x99, 0x98,
-	0x55, 0x2f, 0x60, 0x6d, 0x1c, 0x48, 0x80, 0xbd, 0xc3, 0xbd, 0xf7, 0x72, 0xf1, 0xc1, 0xcd, 0x80,
-	0xd7, 0x1f, 0x34, 0x3f, 0xe2, 0x41, 0x57, 0xc1, 0x78, 0x25, 0x5d, 0x20, 0x45, 0x3f, 0x80, 0xc2,
-	0xb5, 0xe7, 0x9c, 0xeb, 0x27, 0xe6, 0x74, 0xda, 0x3f, 0xdd, 0x3b, 0x15, 0x95, 0x63, 0x93, 0x66,
-	0x8c, 0x3d, 0x36, 0x6b, 0x7f, 0xa6, 0xa0, 0xb0, 0x49, 0xbb, 0x0c, 0x3d, 0x83, 0xc2, 0x6b, 0x3f,
-	0xf4, 0xd0, 0xbc, 0xad, 0x4d, 0x60, 0x67, 0x0e, 0xb1, 0x5f, 0x4a, 0x87, 0xd4, 0x87, 0x9c, 0xa3,
-	0xe7, 0x60, 0xec, 0xe1, 0x53, 0x55, 0x17, 0x2d, 0xd8, 0xff, 0xb9, 0xd3, 0xce, 0x6e, 0x30, 0x34,
-	0x9d, 0x40, 0x25, 0x4b, 0xdf, 0x77, 0xb7, 0x47, 0x31, 0xd4, 0x87, 0x85, 0x78, 0x64, 0x35, 0x3e,
-	0x7f, 0xff, 0xfd, 0x65, 0xb2, 0x86, 0xe6, 0x9d, 0xa3, 0x18, 0x0b, 0xc6, 0x57, 0x24, 0xd4, 0xe1,
-	0xf8, 0xf4, 0xa3, 0xfa, 0x90, 0xa0, 0x3d, 0x98, 0x52, 0x86, 0xba, 0x85, 0x3f, 0xb3, 0xf4, 0x2d,
-	0xfc, 0x03, 0x0f, 0x5a, 0x77, 0x15, 0xff, 0x1d, 0x54, 0x71, 0xa4, 0x9f, 0x9d, 0x40, 0x71, 0xed,
-	0x42, 0x69, 0x83, 0x90, 0x7d, 0x4e, 0x63, 0x74, 0xef, 0x46, 0xae, 0xf6, 0x62, 0xfd, 0x66, 0xbd,
-	0x6c, 0xb0, 0xac, 0x39, 0xc5, 0x09, 0x96, 0xe1, 0x60, 0x42, 0x24, 0x2d, 0x7a, 0x0b, 0xa0, 0x87,
-	0x5a, 0x71, 0xde, 0xd4, 0x33, 0x98, 0xf8, 0x51, 0xb4, 0x57, 0x52, 0x89, 0x82, 0x67, 0xcc, 0xda,
-	0xb3, 0x43, 0x98, 0x07, 0x86, 0x1e, 0x83, 0xb9, 0x5e, 0x71, 0x7a, 0x0a, 0xae, 0x98, 0x77, 0xa1,
-	0xb4, 0x45, 0xc5, 0x90, 0x26, 0x68, 0xcb, 0x8d, 0xd1, 0x84, 0xba, 0xe1, 0x78, 0x54, 0x28, 0xc2,
-	0x37, 0x50, 0x49, 0x09, 0xb7, 0x7d, 0x2e, 0x86, 0x8e, 0xe3, 0x08, 0xce, 0xaa, 0xe2, 0x9c, 0x41,
-	0xd3, 0x19, 0x67, 0xe0, 0x73, 0xd1, 0x5a, 0x38, 0xff, 0xd9, 0x98, 0x38, 0xbf, 0x68, 0xe4, 0xbe,
-	0x5d, 0x34, 0x72, 0x3f, 0x2e, 0x1a, 0xb9, 0xaf, 0xbf, 0x1a, 0x13, 0xef, 0xf2, 0x38, 0xf2, 0xdb,
-	0x45, 0xc5, 0xfd, 0xf4, 0x6f, 0x00, 0x00, 0x00, 0xff, 0xff, 0x82, 0xdb, 0x3a, 0xbe, 0x76, 0x06,
-	0x00, 0x00,
+	// 670 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x94, 0xcf, 0x4f, 0xd4, 0x4c,
+	0x18, 0xc7, 0x29, 0x0b, 0xbb, 0xdd, 0x67, 0x79, 0xdf, 0x97, 0xcc, 0x6b, 0x70, 0xa9, 0xa6, 0x8b,
+	0x55, 0xa2, 0x31, 0xa1, 0x15, 0x24, 0x1e, 0x48, 0x30, 0xe1, 0x87, 0xc1, 0x03, 0x07, 0x53, 0x82,
+	0x31, 0x7a, 0x30, 0x65, 0x67, 0x28, 0x13, 0xba, 0x9d, 0xd2, 0x99, 0x42, 0xb8, 0xea, 0xdd, 0x8b,
+	0x17, 0xff, 0x18, 0xff, 0x00, 0x8e, 0x26, 0xde, 0x37, 0x8a, 0x9e, 0xbc, 0x98, 0xec, 0x5f, 0x60,
+	0x66, 0xda, 0x59, 0x51, 0xb6, 0x64, 0x95, 0xc3, 0x26, 0xdb, 0x3e, 0xcf, 0xf7, 0x33, 0xdf, 0x99,
+	0x3e, 0xdf, 0x81, 0xe6, 0x1e, 0x89, 0x22, 0x76, 0xc4, 0xd2, 0x08, 0x7b, 0x41, 0x42, 0xe5, 0xcf,
+	0x4d, 0x52, 0x26, 0x18, 0xfa, 0x0f, 0x93, 0x0e, 0x73, 0x39, 0x49, 0x0f, 0x69, 0x9b, 0xb8, 0x87,
+	0xf3, 0xd6, 0x5c, 0x48, 0xc5, 0x5e, 0xb6, 0xe3, 0xb6, 0x59, 0xc7, 0x0b, 0x59, 0xc8, 0x3c, 0xd5,
+	0xb7, 0x93, 0xed, 0xaa, 0x27, 0xf5, 0xa0, 0xfe, 0xe5, 0x7a, 0xeb, 0x5a, 0xc8, 0x58, 0x18, 0x91,
+	0x9f, 0x5d, 0xa4, 0x93, 0x88, 0xe3, 0xa2, 0x78, 0xbd, 0x28, 0xaa, 0x25, 0xe3, 0x98, 0x89, 0x40,
+	0x50, 0x16, 0xf3, 0xbc, 0xea, 0xbc, 0x31, 0xc0, 0xdc, 0x64, 0x21, 0x8d, 0x7d, 0x72, 0x80, 0xd6,
+	0xc0, 0xcc, 0x38, 0x49, 0xe3, 0xa0, 0x43, 0x9a, 0xc6, 0x8c, 0x71, 0xa7, 0xbe, 0x7a, 0xbb, 0xd7,
+	0x6d, 0xdd, 0xdc, 0x65, 0x69, 0x67, 0xc9, 0xd1, 0x15, 0x67, 0xe6, 0x30, 0x88, 0x28, 0x0e, 0x04,
+	0x59, 0x72, 0x52, 0x72, 0x90, 0xd1, 0x94, 0x60, 0xc7, 0xef, 0x0b, 0xd1, 0x32, 0x54, 0x93, 0x80,
+	0xf3, 0x23, 0xdc, 0x1c, 0x55, 0x88, 0xd9, 0x5e, 0xb7, 0x75, 0x23, 0x47, 0xe4, 0xef, 0x07, 0x03,
+	0x0a, 0x91, 0xb3, 0x00, 0xf5, 0xc2, 0x0f, 0x4f, 0xd0, 0x2c, 0xd4, 0xd6, 0x58, 0x2c, 0x48, 0x2c,
+	0x0a, 0x3f, 0x8d, 0x6f, 0xdd, 0x56, 0xad, 0x9d, 0xbf, 0xf2, 0x75, 0xcd, 0x79, 0x6d, 0x40, 0x75,
+	0x05, 0xe3, 0x62, 0x0b, 0x31, 0x6d, 0xef, 0x0f, 0xde, 0x82, 0xae, 0x94, 0x6c, 0x41, 0x97, 0xd1,
+	0x22, 0x54, 0x82, 0x90, 0x28, 0xff, 0xe3, 0xab, 0x4e, 0xaf, 0xdb, 0xb2, 0x73, 0x7d, 0x10, 0x96,
+	0x48, 0x65, 0xbb, 0xf3, 0xde, 0x80, 0xfa, 0x76, 0x22, 0x4b, 0xd2, 0xc8, 0x22, 0x54, 0x32, 0x8a,
+	0x95, 0x87, 0xca, 0x59, 0x46, 0x46, 0x4b, 0x0e, 0x40, 0xb6, 0xff, 0x62, 0x7f, 0xf4, 0x92, 0xf6,
+	0x2b, 0x7f, 0x66, 0x7f, 0x05, 0xea, 0xeb, 0x24, 0x22, 0x97, 0x70, 0xef, 0x3c, 0x84, 0xea, 0x06,
+	0x11, 0x7f, 0xaf, 0x9f, 0x07, 0x53, 0x7e, 0x76, 0x16, 0x73, 0x32, 0xec, 0xa7, 0xbf, 0x07, 0xe6,
+	0x63, 0x19, 0x2b, 0xb9, 0xe8, 0x2d, 0x18, 0x3b, 0xf3, 0xdd, 0x27, 0x7b, 0xdd, 0xd6, 0x44, 0x71,
+	0x70, 0xea, 0xd0, 0x7c, 0x55, 0x95, 0x03, 0x56, 0x28, 0x86, 0x1e, 0xb0, 0x85, 0xef, 0xe3, 0x30,
+	0xb6, 0x4e, 0x3a, 0x0c, 0x3d, 0x80, 0xb1, 0x27, 0x34, 0x0e, 0xd1, 0x94, 0x9b, 0xa7, 0xca, 0xd5,
+	0x91, 0x73, 0x1f, 0xc9, 0xc8, 0x59, 0x25, 0xef, 0xd1, 0x32, 0x98, 0x5b, 0xc1, 0xb1, 0x5a, 0x17,
+	0x4d, 0xbb, 0xbf, 0xc5, 0xdd, 0xd5, 0x3b, 0x28, 0x95, 0x63, 0x68, 0x68, 0xf9, 0xb6, 0xbf, 0x79,
+	0x11, 0xc1, 0x2a, 0x2b, 0xf1, 0xc4, 0xb1, 0x5f, 0x7d, 0xfc, 0xfa, 0x76, 0xb4, 0x89, 0xa6, 0xbc,
+	0xfd, 0x34, 0x10, 0x8c, 0xcf, 0xc9, 0x56, 0x8f, 0x07, 0xc7, 0x2f, 0xd5, 0xcd, 0x84, 0xb6, 0x60,
+	0x5c, 0x45, 0x6f, 0x00, 0x5f, 0x5f, 0x11, 0x03, 0xf8, 0xfd, 0xb4, 0x3a, 0xff, 0x2b, 0xfe, 0x3f,
+	0xa8, 0xe1, 0xc9, 0xcb, 0xc0, 0x8b, 0x14, 0xcb, 0x87, 0xda, 0x0a, 0xc6, 0xdb, 0x9c, 0xa4, 0xe8,
+	0xea, 0x39, 0x6d, 0x1e, 0x5a, 0xeb, 0xfc, 0x7a, 0x7a, 0x0c, 0x34, 0xd3, 0x31, 0xbd, 0x00, 0x63,
+	0x89, 0x5d, 0x32, 0xee, 0xa2, 0x67, 0x00, 0xf9, 0xa8, 0x2a, 0xec, 0x79, 0x4b, 0xfd, 0x39, 0x1e,
+	0x82, 0x8c, 0x1a, 0x1e, 0x56, 0xed, 0x12, 0x8e, 0x5e, 0x00, 0xe4, 0x11, 0x2e, 0x21, 0xf7, 0xf3,
+	0x7d, 0x11, 0x79, 0x4a, 0x91, 0x27, 0xad, 0x86, 0x97, 0xa9, 0x76, 0x6d, 0xdb, 0x87, 0xda, 0x06,
+	0x11, 0x25, 0x47, 0x91, 0x07, 0x67, 0x08, 0xc3, 0x96, 0xe9, 0x85, 0x44, 0x68, 0xe6, 0x53, 0x68,
+	0x14, 0xcc, 0x4d, 0xca, 0x45, 0xe9, 0x5c, 0x5e, 0x80, 0xbd, 0xa2, 0xb0, 0xff, 0xa2, 0x09, 0x8d,
+	0x8d, 0x28, 0x17, 0xab, 0xd3, 0x27, 0x9f, 0xed, 0x91, 0x93, 0x53, 0xdb, 0xf8, 0x70, 0x6a, 0x1b,
+	0x9f, 0x4e, 0x6d, 0xe3, 0xdd, 0x17, 0x7b, 0xe4, 0x79, 0x25, 0x48, 0xe8, 0x4e, 0x55, 0xb1, 0xef,
+	0xff, 0x08, 0x00, 0x00, 0xff, 0xff, 0xa4, 0xaf, 0x20, 0x24, 0xd0, 0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -1098,19 +1093,7 @@ func (m *Response) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 		copy(dAtA[i:], m.Content)
 		i = encodeVarintApi(dAtA, i, uint64(len(m.Content)))
 		i--
-		dAtA[i] = 0x1a
-	}
-	if len(m.Message) > 0 {
-		i -= len(m.Message)
-		copy(dAtA[i:], m.Message)
-		i = encodeVarintApi(dAtA, i, uint64(len(m.Message)))
-		i--
-		dAtA[i] = 0x12
-	}
-	if m.Code != 0 {
-		i = encodeVarintApi(dAtA, i, uint64(m.Code))
-		i--
-		dAtA[i] = 0x8
+		dAtA[i] = 0xa
 	}
 	return len(dAtA) - i, nil
 }
@@ -1307,13 +1290,6 @@ func (m *Response) Size() (n int) {
 	}
 	var l int
 	_ = l
-	if m.Code != 0 {
-		n += 1 + sovApi(uint64(m.Code))
-	}
-	l = len(m.Message)
-	if l > 0 {
-		n += 1 + l + sovApi(uint64(l))
-	}
 	l = len(m.Content)
 	if l > 0 {
 		n += 1 + l + sovApi(uint64(l))
@@ -1953,57 +1929,6 @@ func (m *Response) Unmarshal(dAtA []byte) error {
 		}
 		switch fieldNum {
 		case 1:
-			if wireType != 0 {
-				return fmt.Errorf("proto: wrong wireType = %d for field Code", wireType)
-			}
-			m.Code = 0
-			for shift := uint(0); ; shift += 7 {
-				if shift >= 64 {
-					return ErrIntOverflowApi
-				}
-				if iNdEx >= l {
-					return io.ErrUnexpectedEOF
-				}
-				b := dAtA[iNdEx]
-				iNdEx++
-				m.Code |= int64(b&0x7F) << shift
-				if b < 0x80 {
-					break
-				}
-			}
-		case 2:
-			if wireType != 2 {
-				return fmt.Errorf("proto: wrong wireType = %d for field Message", wireType)
-			}
-			var stringLen uint64
-			for shift := uint(0); ; shift += 7 {
-				if shift >= 64 {
-					return ErrIntOverflowApi
-				}
-				if iNdEx >= l {
-					return io.ErrUnexpectedEOF
-				}
-				b := dAtA[iNdEx]
-				iNdEx++
-				stringLen |= uint64(b&0x7F) << shift
-				if b < 0x80 {
-					break
-				}
-			}
-			intStringLen := int(stringLen)
-			if intStringLen < 0 {
-				return ErrInvalidLengthApi
-			}
-			postIndex := iNdEx + intStringLen
-			if postIndex < 0 {
-				return ErrInvalidLengthApi
-			}
-			if postIndex > l {
-				return io.ErrUnexpectedEOF
-			}
-			m.Message = string(dAtA[iNdEx:postIndex])
-			iNdEx = postIndex
-		case 3:
 			if wireType != 2 {
 				return fmt.Errorf("proto: wrong wireType = %d for field Content", wireType)
 			}
