# api/api.swagger.json
@@ -79,7 +79,7 @@
                     {
                         "name": "uid",
                         "in": "query",
-                        "required": false,
+                        "required": true,
                         "type": "integer"
                     }
                 ],
@@ -251,13 +251,13 @@
                     {
                         "name": "username",
                         "in": "query",
-                        "required": false,
+                        "required": true,
                         "type": "string"
                     },
                     {
                         "name": "passwd",
                         "in": "query",
-                        "required": false,
+                        "required": true,
                         "type": "string"
                     }
                 ],
@@ -278,7 +278,11 @@
                     "type": "integer"
                 }
             },
-            "description": "增删改查接口响应参数"
+            "description": "增删改查接口响应参数",
+            "required": [
+                "nickname",
+                "age"
+            ]
         },
         ".demo.service.v1.DeleteReq": {
             "type": "object",
@@ -286,7 +290,10 @@
                 "uid": {
                     "type": "integer"
                 }
-            }
+            },
+            "required": [
+                "uid"
+            ]
         },
         ".demo.service.v1.GetReq": {
             "type": "object",
@@ -294,7 +301,10 @@
                 "uid": {
                     "type": "integer"
                 }
-            }
+            },
+            "required": [
+                "uid"
+            ]
         },
         ".demo.service.v1.HelloReq": {
             "type": "object",
@@ -324,7 +334,11 @@
                     "type": "string"
                 }
             },
-            "description": "--------------------自定义message：自定义验证器错误消息--------------------------//\n-----jsontag\n-----其他tag（moretags）\n-----form：\n-----validate：验证器\n------required：字段为必填项，值不能为空"
+            "description": "--------------------自定义message：自定义验证器错误消息--------------------------//\n-----jsontag\n-----其他tag（moretags）\n-----form：\n-----validate：验证器\n------required：字段为必填项，值不能为空",
+            "required": [
+                "username",
+                "passwd"
+            ]
         },
         ".demo.service.v1.LoginResp": {
             "type": "object",
@@ -338,12 +352,6 @@
         ".demo.service.v1.Response": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "globalcode.Msg[code]": {
-                    "type": "string"
-                },
                 "content": {
                     "type": "string"
                 }
@@ -361,7 +369,12 @@
                 "age": {
                     "type": "integer"
                 }
-            }
+            },
+            "required": [
+                "uid",
+                "nickname",
+                "age"
+            ]
         },
         ".google.protobuf.Empty": {
             "type": "object",
